gitops-patterns/pattern-2-git-generator/tenant-examples/team-beta-services/services/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: ghcr.io/csz-ghorg/api:latest
        ports:
        - containerPort: 8080
